2018-03-06  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_OP_implicit_pointer, DW_OP_addrx, DW_OP_constx,
	DW_OP_entry_value, DW_OP_const_type, DW_OP_regval_type,
	DW_OP_deref_type, DW_OP_xderef_type, DW_OP_convert and
	DW_OP_reinterpret.
	* dwarf_getlocation.c (__libdw_intern_expression): Handle
	DW_OP_convert, DW_OP_reinterpret, DW_OP_addrx, DW_OP_constx,
	DW_OP_regval_type, DW_OP_entry_value, DW_OP_implicit_pointer,
	DW_OP_deref_type, DW_OP_xderef_type and DW_OP_const_type.
	* dwarf_getlocation_attr.c (dwarf_getlocation_attr): Handle
	DW_OP_entry_value, DW_OP_const_type and DW_OP_implicit_pointer.
	* dwarf_getlocation_die.c (dwarf_getlocation_die): Handle
	DW_OP_implicit_pointer, DW_OP_convert, DW_OP_reinterpret,
	DW_OP_const_type, DW_OP_regval_type, DW_OP_deref_type and
	DW_OP_xderef_type.
	* dwarf_getlocation_implicit_pointer.c
	(dwarf_getlocation_implicit_pointer): Handle DW_OP_implicit_pointer.

2018-03-01  Mark Wielaard  <mark@klomp.org>

	* dwarf.h: Add DW_AT_GNU_locviews and DW_AT_GNU_entry_view.
	* dwarf_formudata.c (dwarf_formudata): Handle DW_AT_GNU_locviews
	as a loclistptr.

2018-02-09  Mark Wielaard  <mark@klomp.org>

	* dwarf_formblock.c (dwarf_formblock): Handle DW_FORM_data16 as a
	16 byte block.

2018-02-09  Mark Wielaard  <mark@klomp.org>

	* dwarf_child.c (__libdw_find_attr): Handle DW_FORM_implicit_const.
	* dwarf_formsdata.c (dwarf_formsdata): Likewise.
	* dwarf_formudata.c (dwarf_formudata): Likewise.
	* dwarf_getabbrev.c (__libdw_getabbrev): Likewise.
	* dwarf_getattrs.c (dwarf_getattrs): Likewise.
	* dwarf_hasattr.c (dwarf_hasattr): Likewise.
	* dwarf_getabbrevattr.c (dwarf_getabbrevattr_data): New function
	that will also return any data associated with the abbrev. Which
	currently is only for DW_FORM_implicit_const. Based on...
	(dwarf_getabbrevattr): ... this function. Which now just calls
	dwarf_getabbrevattr_data.
	* libdw.h (dwarf_getabbrevattr_data): Declare new function.